--- a/layouts/page/homepage.html
+++ b/layouts/page/homepage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<title> Ldwork Game Dev</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }}</title>
     <link rel="stylesheet" href="/css/homepage.css"> <!-- Load only for the homepage -->
+    <link rel="icon" href="/images/favicon.png" type="image/png">
 </head>
 <body>
     <!-- Title + Social Icons Container -->
