--- a/layouts/page/project_detail.html
+++ b/layouts/page/project_detail.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="/css/project_detail.css">
+<title> Ldwork Game Dev</title>
+<head>
+    <link rel="stylesheet" href="/css/project_detail.css">
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+</head>
 
  <!-- Title + Social Icons Container -->
  <div class="title-social-container">
